--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 body {
   padding: 0;
   margin: 0;
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
   min-height: 100vh;
   color: #333;
+}
+
+.background--main {
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 }
 
 .card-profile--container {
@@ -21,10 +24,17 @@ body {
   max-width: 250px;
 }
 .profile-avatar {
+  border-radius: 100%;
+  overflow: hidden;
+  padding: 6px;
   width: 150px;
   height: 150px;
-  object-fit: cover;
+}
+.profile-avatar--img {
+  width: 150px;
+  height: 150px;
   border-radius: 100%;
+  object-fit: cover;
 }
 .profile-name {
   margin: 15px 0;
@@ -36,7 +46,7 @@ body {
   color: #666;
 }
 .card {
-  background: rgba(255, 255, 255, .8);
+  background: #ffffff;
   border-radius: 3px;
   padding: 20px;
 }
